[package]
name = "uavcan_s32k"
version = "0.0.1"
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
description = "Template for getting started with development on the NXP s32k144evb evaluation board"
keywords = ["arm", "cortex-m", "s32k144", "template"]
categories = ["embedded", "no-std", "hardware-support"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kjetilkjeka/s32k144evb.rs"

[dependencies]
s32k144 = "0.6.1"
s32k144evb = "0.6.0"
embedded_types = "0.3.0"

[dependencies.uavcan]
path = "../uavcan/uavcan"
default-features = false

[dev-dependencies]
bit_field = "0.8.0"
alloc-cortex-m = "0.3.1"